RESOLVED FIXED229932
[Win][DumpRenderTree] ASSERTION FAILED: openWindows().size() == 1 in runTest
https://bugs.webkit.org/show_bug.cgi?id=229932
Summary [Win][DumpRenderTree] ASSERTION FAILED: openWindows().size() == 1 in runTest
Fujii Hironori
Reported 2021-09-06 00:54:08 PDT
[Win][DumpRenderTree] ASSERTION FAILED: openWindows().size() == 1 in runTest The assertion is failing since this test run. WinCairo-64-bit-WKL-Debug-Tests (241340@main) https://build.webkit.org/#/builders/32/builds/932 fast/dom/Window/window-open-opener-cycle.html [ Crash ] ASSERTION FAILED: openWindows().size() == 1 ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1351) : runTest 1 00007FF8F95D1E8A WTFCrash 2 00007FF8F7BB18B1 WTFCrashWithInfo 3 00007FF8F7C0ADA5 runTest 4 00007FF8F7C0BCF8 main 5 00007FF8F7C0BF1F dllLauncherEntryPoint 6 00007FF6195A1A0A main 7 00007FF6195A5758 __scrt_common_main_seh 8 00007FF90D907974 BaseThreadInitThunk 9 00007FF9247AA271 RtlUserThreadStart
Attachments
Patch (1.43 KB, patch)
2021-09-06 13:06 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2021-09-06 13:06:10 PDT
Fujii Hironori
Comment 2 2021-09-08 12:52:45 PDT
Comment on attachment 437434 [details] Patch Clearing flags on attachment: 437434 Committed r282164 (241456@main): <https://commits.webkit.org/241456@main>
Fujii Hironori
Comment 3 2021-09-08 12:52:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2021-09-08 12:53:17 PDT
Note You need to log in before you can comment on or make changes to this bug.