[Win][DumpRenderTree] ASSERTION FAILED: openWindows().size() == 1 in runTest https://bugs.webkit.org/show_bug.cgi?id=229932

Reviewed by Chris Dumez.

runTest() called DestroyWindow while iterating 'openWindows'.
However, DestroyWindow dispatches WM_DESTROY that removes the item
from 'openWindows'.

* DumpRenderTree/win/DumpRenderTree.cpp:
(runTest): Copy the vector to iterate.

Canonical link: https://commits.webkit.org/241456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282164 268f45cc-cd09-0410-ab3c-d52691b4dbfc